--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
   },
+  "TokenKey": "Super secret unguessable Key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
