Image upload Completed

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
+  "CloudinarySettings": {
+    "CloudName": "dzrnrriyg",
+    "ApiKey": "963465596818395",
+    "ApiSecret": "oDEmkG6Oq7ZFPyBF_B3oS0fRtT8"
+  },
   "AllowedHosts": "*"
 }
