--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "ngx-spinner": "^12.0.0",
     "ngx-timeago": "^2.0.0",
     "ngx-toastr": "^14.2.1",
+    "restore": "^0.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
