--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "font-awesome": "^4.7.0",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^7.1.2",
+    "ngx-owl-carousel-o": "^14.0.1",
     "ngx-spinner": "^12.0.0",
     "ngx-timeago": "^2.0.0",
     "ngx-toastr": "^14.2.1",
