--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=datingapp.db"
+    //"DefaultConnection": "Data source=datingapp.db"
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=appuser; Password=Paw0rd; Database=datingapp"
   },
   "TokenKey": "Super secret unguessable Key",
   "Logging": {
